--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,12 +3,12 @@ html, body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Cabin', sans-serif;
+	font-family: 'Comic sans', sans-serif;
 	color: #0b254a;
 }
 
 p {
-	font-family: 'Cabin', sans-serif;
+	font-family: 'Comic sans', sans-serif;
 	color: #6b7480;
 }
 
